--- a/balanceSimple/balanceSimple.csproj
+++ b/balanceSimple/balanceSimple.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Scrutor" Version="5.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
